--- a/selectionPoC.ipynb
+++ b/selectionPoC.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnbK9RYlS0Bw1uwUeaJhGA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/krusegw/cs315/blob/main/selectionPoC.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lukeb667/laBecker_CS315/blob/main/selectionPoC.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -45,13 +44,21 @@
       "metadata": {
         "id": "fSME9MywceAq"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def selection(A,print_flag):\n",
+        "def selection(A):\n",
+        "  n = len(A)\n",
+        "  for i in range(n-2):\n",
+        "    smallest = i\n",
+        "    for j in range(i, n):\n",
+        "      if A[smallest] > A[j]:\n",
+        "        smallest = j\n",
+        "    A[smallest], A[i] = A[i], A[smallest]\n",
+        "  return A\n",
         "\n",
         "\n",
         "# for your convenience, the psuedocode from class is provided, and note that you don't really need line 1, you can handle that in the outer for loop statement\n",
@@ -66,7 +73,7 @@
       "metadata": {
         "id": "TJZL4jFQZhAp"
       },
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -78,14 +85,27 @@
         "random.shuffle(A)\n",
         "\n",
         "print(A)\n",
-        "selection(A,True)\n",
+        "selection(A)\n",
         "print(A)"
       ],
       "metadata": {
-        "id": "f1GS3NjwZqmS"
+        "id": "f1GS3NjwZqmS",
+        "outputId": "4c6c7bbf-085e-4665-f8b6-09f85ab2e6e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[7, 2, 5, 4, 0, 1, 3, 6]\n",
+            "[0, 1, 2, 3, 4, 5, 7, 6]\n"
+          ]
+        }
+      ]
     }
   ]
 }
