--- a/QuicksortPoCkey .ipynb
+++ b/QuicksortPoCkey .ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8jN4RuzRsqsxpZNFOR4NP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +22,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/krusegw/cs315/blob/main/QuicksortPoCkey%20.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lukeb667/laBecker_CS315/blob/main/QuicksortPoCkey%20.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "t_LwP80OmwFK"
       },
@@ -40,17 +39,20 @@
     {
       "cell_type": "code",
       "source": [
-        "import random"
+        "import random\n",
+        "import time\n",
+        "import sys"
       ],
       "metadata": {
         "id": "LMcLd_etm-0Y"
       },
-      "execution_count": 2,
+      "execution_count": 34,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "# Partition provided as a convenience\n",
         "\n",
         "def Partition(A,p,r):\n",
@@ -73,7 +75,7 @@
       "metadata": {
         "id": "TyWIYm1_nIYR"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -90,43 +92,55 @@
       "metadata": {
         "id": "neX-YNcPnLpk"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "N=8\n",
+        "sys.setrecursionlimit(50000)\n",
+        "\n",
+        "N=10000\n",
         "A = list(range(N))\n",
         "\n",
-        "random.shuffle(A)\n",
+        "# random.shuffle(A)\n",
+        "# A.reverse()\n",
         "\n",
-        "print(A)\n",
-        "Quicksort(A,0,N-1,True)\n",
-        "print(A)"
+        "\n",
+        "start = time.time()\n",
+        "Quicksort(A,0,N-1,False)\n",
+        "end = time.time()\n",
+        "\n",
+        "print(\"Sorted!\")\n",
+        "print(\"N:\", N, \"|\", \"Time:\", end-start)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RVXFjLS0nCeo",
-        "outputId": "9d5f56a3-0028-4bf8-b821-e0df6334c126"
+        "outputId": "d107f287-298a-4622-e091-c1856ccc4576"
       },
-      "execution_count": 11,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[4, 3, 0, 5, 7, 6, 2, 1]\n",
-            "[0, 1, 4, 5, 7, 6, 2, 3]\n",
-            "[0, 1, 2, 3, 7, 6, 4, 5]\n",
-            "[0, 1, 2, 3, 4, 5, 7, 6]\n",
-            "[0, 1, 2, 3, 4, 5, 6, 7]\n",
-            "[0, 1, 2, 3, 4, 5, 6, 7]\n"
+            "Sorted!\n",
+            "N: 10000 | Time: 5.284833908081055\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GuL9bZEpnYou"
+      },
+      "execution_count": 18,
+      "outputs": []
     }
   ]
 }
