--- a/QuicksortPoCkey .ipynb
+++ b/QuicksortPoCkey .ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "t_LwP80OmwFK"
       },
@@ -41,12 +41,13 @@
       "source": [
         "import random\n",
         "import time\n",
-        "import sys"
+        "import sys\n",
+        "import math"
       ],
       "metadata": {
         "id": "LMcLd_etm-0Y"
       },
-      "execution_count": 34,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -61,11 +62,10 @@
         "    for j in range(p,r):\n",
         "        if ( A[j] <= x ):\n",
         "            i = i + 1\n",
-        "            #swap A[i] <--> A[j]\n",
         "            temp=A[i]\n",
         "            A[i]=A[j]\n",
         "            A[j]=temp\n",
-        "    #swap A[i+1] <--> A[r]\n",
+        "\n",
         "    temp=A[i+1]\n",
         "    A[i+1]=A[r]\n",
         "    A[r]=temp\n",
@@ -75,24 +75,22 @@
       "metadata": {
         "id": "TyWIYm1_nIYR"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def Quicksort(A,p,r,print_flag):\n",
-        "    if p < r:\n",
-        "        q  = Partition(A , p , r)\n",
-        "        if print_flag:\n",
-        "            print(A)\n",
-        "        Quicksort(A , p , q-1,print_flag)\n",
-        "        Quicksort(A , q+1 , r,print_flag)"
+        "def Quicksort(A,p,r):\n",
+        "  while p < r:\n",
+        "    q = Partition(A , p , r)\n",
+        "    Quicksort(A , p , q-1)\n",
+        "    p=q+1"
       ],
       "metadata": {
         "id": "neX-YNcPnLpk"
       },
-      "execution_count": 3,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -101,34 +99,40 @@
         "sys.setrecursionlimit(50000)\n",
         "\n",
         "N=10000\n",
+        "EXPECTED_TIME = N*math.log(N,2)\n",
+        "\n",
         "A = list(range(N))\n",
         "\n",
-        "# random.shuffle(A)\n",
-        "# A.reverse()\n",
+        "random.shuffle(A)\n",
+        "A.reverse()\n",
         "\n",
         "\n",
         "start = time.time()\n",
-        "Quicksort(A,0,N-1,False)\n",
+        "Quicksort(A,0,N-1)\n",
         "end = time.time()\n",
         "\n",
+        "ratio=(end-start)/(EXPECTED_TIME)\n",
+        "\n",
         "print(\"Sorted!\")\n",
-        "print(\"N:\", N, \"|\", \"Time:\", end-start)\n"
+        "print(\"N:\", N, \"|\", \"Time:\", end-start, \"Ratio:\", ratio)\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RVXFjLS0nCeo",
-        "outputId": "d107f287-298a-4622-e091-c1856ccc4576"
+        "outputId": "4b1761c1-325f-4438-bc7e-fdd5bcdcb8a8"
       },
-      "execution_count": 47,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Sorted!\n",
-            "N: 10000 | Time: 5.284833908081055\n"
+            "N: 10000 | Time: 0.01945781707763672 Ratio: 1.46434664762788e-07\n"
           ]
         }
       ]
@@ -139,7 +143,7 @@
       "metadata": {
         "id": "GuL9bZEpnYou"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     }
   ]
