--- a/HW04_InsertionSort.ipynb
+++ b/HW04_InsertionSort.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lukeb667/laBecker_CS315/blob/main/insertionPoC.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lukeb667/laBecker_CS315/blob/main/HW04_InsertionSort.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -33,81 +33,86 @@
       },
       "outputs": [],
       "source": [
-        "# Template for testing Insertion-Sort on small lists, outputing each intermediate step"
+        "# Luke Becker\n",
+        "# October 4, 2025\n",
+        "# HW04, Algorithms & Analysis\n",
+        "\n",
+        "# This file demonstrates the timing of insertion sort.\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "import random"
+        "import random\n",
+        "import math\n",
+        "import time"
       ],
       "metadata": {
         "id": "fSME9MywceAq"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def insertion(A,print_flag):\n",
-        "\n",
-        "# For your convenience, here is the psuedocode from the textbook for Insertion-Sort\n",
-        "# You can adapt it for this problem, there aren't many changes required\n",
-        "# Note that N is defined in a different execution group and doesn't need to be a parameter\n",
-        "# Also, it is nice to have a boolean flag controlling whether the intermediate result is printed\n",
-        "# The psuedocode is written to be \"in-place,\" so the input list changes\n",
-        "\n",
-        "# Insertion-Sort(A,n)\n",
-        "# for i=2 to n:\n",
-        "#    key = A[i]\n",
-        "# insert A[i] into sorted seq A[1]..A[i-1]\n",
-        "#    j = i-1\n",
-        "#    while j>0 and A[j]>key:\n",
-        "#       A[j+1] = A[j]\n",
-        "#       j = j-1\n",
-        "#    A[j+1] = key"
+        "def insertion(A):\n",
+        "    n = len(A)\n",
+        "    for i in range(1, n):\n",
+        "        key = A[i]\n",
+        "        j = i - 1\n",
+        "        while j >= 0 and A[j] > key:\n",
+        "            A[j + 1] = A[j]\n",
+        "            j -= 1\n",
+        "        A[j + 1] = key"
       ],
       "metadata": {
         "id": "TJZL4jFQZhAp"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "N=8\n",
-        "A = list(range(N))\n",
+        "for size in [10, 100, 1000, 10000]:\n",
+        "    N = size # Run the sorting algorithm on multiple array sizes\n",
         "\n",
-        "random.shuffle(A)\n",
+        "    # Expected time for merge sort\n",
+        "    EXPECTED_TIME = math.pow(N, 2)\n",
         "\n",
-        "print(A)\n",
-        "insertion(A,True)\n",
-        "print(A)"
+        "    # Create a list of integers with size N and shuffle it.\n",
+        "    LIST = list(range(N))\n",
+        "    random.shuffle(LIST)\n",
+        "\n",
+        "    # Time the algorithm\n",
+        "    start = time.time()\n",
+        "    insertion(LIST)\n",
+        "    end = time.time()\n",
+        "\n",
+        "    # Determine the time to size ratio\n",
+        "    ratio=(end-start)/(EXPECTED_TIME)\n",
+        "\n",
+        "    # Display results. Not in timing chunk, so will not skew results.\n",
+        "    print(\"N:\", N, \"|\", \"Time:\", end-start, \"|\", \"Ratio:\", ratio)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "f1GS3NjwZqmS",
-        "outputId": "2d92956d-dace-4b73-b18f-a0ef72875ad8"
+        "outputId": "3b8435f6-7c16-4a51-fbb4-60b38b6e82e0"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[7, 1, 2, 4, 3, 6, 5, 0]\n",
-            "[1, 7, 2, 4, 3, 6, 5, 0]\n",
-            "[1, 2, 7, 4, 3, 6, 5, 0]\n",
-            "[1, 2, 4, 7, 3, 6, 5, 0]\n",
-            "[1, 2, 3, 4, 7, 6, 5, 0]\n",
-            "[1, 2, 3, 4, 6, 7, 5, 0]\n",
-            "[1, 2, 3, 4, 5, 6, 7, 0]\n",
-            "[0, 1, 2, 3, 4, 5, 6, 7]\n",
-            "[0, 1, 2, 3, 4, 5, 6, 7]\n"
+            "N: 10 | Time: 4.0531158447265625e-06 | Ratio: 4.053115844726563e-08\n",
+            "N: 100 | Time: 0.00020241737365722656 | Ratio: 2.0241737365722657e-08\n",
+            "N: 1000 | Time: 0.02307724952697754 | Ratio: 2.307724952697754e-08\n",
+            "N: 10000 | Time: 2.3976447582244873 | Ratio: 2.3976447582244872e-08\n"
           ]
         }
       ]
