--- a/HW04_InsertionSort.ipynb
+++ b/HW04_InsertionSort.ipynb
@@ -78,7 +78,7 @@
         "for size in [10, 100, 1000, 10000]:\n",
         "    N = size # Run the sorting algorithm on multiple array sizes\n",
         "\n",
-        "    # Expected time for merge sort\n",
+        "    # Expected time for insertion sort\n",
         "    EXPECTED_TIME = math.pow(N, 2)\n",
         "\n",
         "    # Create a list of integers with size N and shuffle it.\n",
