--- a/HW04_MergeSort.ipynb
+++ b/HW04_MergeSort.ipynb
@@ -56,61 +56,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import math  # Required for math.floor\n",
-        "\n",
-        "def mergesort(SORT_THIS):\n",
-        "    def merge(L1, L2):\n",
-        "        \"\"\"\n",
-        "        Merge two sorted lists into a single sorted list.\n",
-        "\n",
-        "        Parameters\n",
-        "        ----------\n",
-        "        L1, L2 : list\n",
-        "            Sorted lists (ascending order).\n",
-        "\n",
-        "        Returns\n",
-        "        -------\n",
-        "        list\n",
-        "            Sorted list containing all elements of L1 and L2.\n",
-        "        \"\"\"\n",
-        "        C = []  # Output list\n",
-        "\n",
-        "        # Walk down both lists, always taking the smaller head element\n",
-        "        while len(L1) > 0 and len(L2) > 0:\n",
-        "            if L1[0] <= L2[0]:\n",
-        "                C.append(L1[0])\n",
-        "                L1.pop(0)  # Remove the consumed element\n",
-        "            else:\n",
-        "                C.append(L2[0])\n",
-        "                L2.pop(0)\n",
-        "\n",
-        "        # Exactly one of the lists may still have leftovers; append them\n",
-        "        while len(L1) > 0:\n",
-        "            C.append(L1[0])\n",
-        "            L1.pop(0)\n",
-        "\n",
-        "        while len(L2) > 0:\n",
-        "            C.append(L2[0])\n",
-        "            L2.pop(0)\n",
-        "\n",
-        "        return C\n",
-        "    # ---------- end helper ----------\n",
-        "\n",
-        "    # ---------- recursive divide & conquer ----------\n",
-        "    # Base-case: lists of length 0 or 1 are already sorted\n",
-        "    # (The original code uses ≤ 2, but 2-element lists still need ordering!)\n",
-        "    if len(SORT_THIS) <= 1:\n",
-        "        return SORT_THIS[:]  # Return a shallow copy\n",
-        "\n",
-        "    mid = math.floor(len(SORT_THIS) / 2)  # Split index\n",
-        "\n",
-        "    # Recursively sort each half\n",
-        "    left_sorted = mergesort(SORT_THIS[:mid])  # Left half\n",
-        "    right_sorted = mergesort(SORT_THIS[mid:])  # Right half\n",
-        "\n",
-        "    # Merge the two sorted halves\n",
-        "    return merge(left_sorted, right_sorted)\n",
-        "\n",
         "def mergesort(SORT_THIS):\n",
         "    '''Merge sort splits up a list into sorted (size 1) sublists and then uses the merge function to recombine them sorted'''\n",
         "    def merge(L1, L2):\n",
@@ -152,23 +97,60 @@
       "metadata": {
         "id": "TyWIYm1_nIYR"
       },
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "neX-YNcPnLpk"
-      },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Sorted Data\n",
+        "for size in [100, 1000, 10000, 100000]:\n",
+        "    N = size # Run the sorting algorithm on multiple array sizes\n",
         "\n",
+        "    # Expected time for merge sort\n",
+        "    EXPECTED_TIME = N * math.log2(N)\n",
         "\n",
+        "    # Create a list of integers with size N and shuffle it.\n",
+        "    LIST = list(range(N))\n",
+        "    random.shuffle(LIST)\n",
+        "\n",
+        "    # Time the algorithm\n",
+        "    start = time.time()\n",
+        "    mergesort(LIST)\n",
+        "    end = time.time()\n",
+        "\n",
+        "    # Determine the time to size ratio\n",
+        "    ratio=(end-start)/(EXPECTED_TIME)\n",
+        "\n",
+        "    # Display results. Not in timing chunk, so will not skew results.\n",
+        "    print(\"N:\", N, \"|\", \"Time:\", end-start, \"|\", \"Ratio:\", ratio)"
+      ],
+      "metadata": {
+        "id": "neX-YNcPnLpk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ea9ecc57-c8bd-4146-dd67-504fb765c26f"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "N: 100 | Time: 0.0002484321594238281 | Ratio: 3.7392765937074234e-07\n",
+            "N: 1000 | Time: 0.002643108367919922 | Ratio: 2.6521830017812215e-07\n",
+            "N: 10000 | Time: 0.039159536361694336 | Ratio: 2.94704876529109e-07\n",
+            "N: 100000 | Time: 1.246389627456665 | Ratio: 7.504013282978221e-07\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# Unsorted Data\n",
         "for size in [100, 1000, 10000, 100000]:\n",
         "    N = size # Run the sorting algorithm on multiple array sizes\n",
         "\n",
@@ -197,18 +179,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RVXFjLS0nCeo",
-        "outputId": "9ef627d6-7aba-4186-f559-478e42dd02bd"
+        "outputId": "b23f833d-18b5-4cee-8f16-d3cffc9384fb"
       },
-      "execution_count": 8,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "N: 100 | Time: 0.0002570152282714844 | Ratio: 3.8684646526071043e-07\n",
-            "N: 1000 | Time: 0.002674579620361328 | Ratio: 2.68376230506781e-07\n",
-            "N: 10000 | Time: 0.04059863090515137 | Ratio: 3.0553514213353223e-07\n",
-            "N: 100000 | Time: 1.5743098258972168 | Ratio: 9.478289601272043e-07\n"
+            "N: 100 | Time: 0.00021529197692871094 | Ratio: 3.24046714406699e-07\n",
+            "N: 1000 | Time: 0.002594470977783203 | Ratio: 2.6033786239746755e-07\n",
+            "N: 10000 | Time: 0.04044365882873535 | Ratio: 3.0436886104624346e-07\n",
+            "N: 100000 | Time: 1.3339073657989502 | Ratio: 8.030922570852211e-07\n"
           ]
         }
       ]
