--- a/HW04_Selection.ipynb
+++ b/HW04_Selection.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lukeb667/laBecker_CS315/blob/main/selectionPoC.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lukeb667/laBecker_CS315/blob/main/HW04_Selection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -33,18 +33,24 @@
       },
       "outputs": [],
       "source": [
-        "# Template for testing Selection Sort on small lists, outputing each intermediate step"
+        "# Luke Becker\n",
+        "# October 4, 2025\n",
+        "# HW04, Algorithms & Analysis\n",
+        "\n",
+        "# This file demonstrates the timing of selection sort.\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "import random"
+        "import random\n",
+        "import math\n",
+        "import time"
       ],
       "metadata": {
         "id": "fSME9MywceAq"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +79,7 @@
       "metadata": {
         "id": "TJZL4jFQZhAp"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +101,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
