--- a/HW04_Selection.ipynb
+++ b/HW04_Selection.ipynb
@@ -37,7 +37,7 @@
         "# October 4, 2025\n",
         "# HW04, Algorithms & Analysis\n",
         "\n",
-        "# This file demonstrates the timing of selection sort.\n"
+        "# This file demonstrates the timing of selection sort."
       ]
     },
     {
@@ -50,65 +50,117 @@
       "metadata": {
         "id": "fSME9MywceAq"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def selection(A):\n",
-        "  n = len(A)\n",
+        "  n = len(A) # Get length of list\n",
         "  for i in range(n-2):\n",
         "    smallest = i\n",
         "    for j in range(i, n):\n",
         "      if A[smallest] > A[j]:\n",
         "        smallest = j\n",
+        "    # swap the smallest element remaining after i with i.\n",
         "    A[smallest], A[i] = A[i], A[smallest]\n",
-        "  return A\n",
-        "\n",
-        "\n",
-        "# for your convenience, the psuedocode from class is provided, and note that you don't really need line 1, you can handle that in the outer for loop statement\n",
-        "#n = length[A]\n",
-        "#for i=1 to n-1:\n",
-        "#   smallest = i\n",
-        "#   for j=i+1 to n:\n",
-        "#      if A[smallest] > A[j]\n",
-        "#         then smallest = j\n",
-        "#   Swap A[i] with A[smallest]"
+        "  return A"
       ],
       "metadata": {
         "id": "TJZL4jFQZhAp"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "N=8\n",
-        "A = list(range(N))\n",
+        "# Unsorted Data\n",
+        "for size in [100, 100, 1000, 10000]:\n",
+        "    N = size # Run the sorting algorithm on multiple array sizes\n",
         "\n",
-        "random.shuffle(A)\n",
+        "    # Expected time for selection sort\n",
+        "    EXPECTED_TIME = math.pow(N, 2)\n",
         "\n",
-        "print(A)\n",
-        "selection(A)\n",
-        "print(A)"
+        "    # Create a list of integers with size N and shuffle it.\n",
+        "    LIST = list(range(N))\n",
+        "    random.shuffle(LIST)\n",
+        "\n",
+        "    # Time the algorithm\n",
+        "    start = time.time()\n",
+        "    selection(LIST)\n",
+        "    end = time.time()\n",
+        "\n",
+        "    # Determine the time to size ratio\n",
+        "    ratio=(end-start)/(EXPECTED_TIME)\n",
+        "\n",
+        "    # Display results. Not in timing chunk, so will not skew results.\n",
+        "    print(\"N:\", N, \"|\", \"Time:\", end-start, \"|\", \"Ratio:\", ratio)"
       ],
       "metadata": {
         "id": "f1GS3NjwZqmS",
-        "outputId": "4c6c7bbf-085e-4665-f8b6-09f85ab2e6e8",
+        "outputId": "d50570df-2629-410b-c7df-9ab01a20396b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[7, 2, 5, 4, 0, 1, 3, 6]\n",
-            "[0, 1, 2, 3, 4, 5, 7, 6]\n"
+            "N: 100 | Time: 0.0003349781036376953 | Ratio: 3.3497810363769535e-08\n",
+            "N: 100 | Time: 0.00034737586975097656 | Ratio: 3.4737586975097655e-08\n",
+            "N: 1000 | Time: 0.05515241622924805 | Ratio: 5.515241622924805e-08\n",
+            "N: 10000 | Time: 3.215771198272705 | Ratio: 3.215771198272705e-08\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Sorted Data\n",
+        "for size in [100, 100, 1000, 10000]:\n",
+        "    N = size # Run the sorting algorithm on multiple array sizes\n",
+        "\n",
+        "    # Expected time for selection sort\n",
+        "    EXPECTED_TIME = math.pow(N, 2)\n",
+        "\n",
+        "    # Create a list of integers with size N and shuffle it.\n",
+        "    LIST = list(range(N))\n",
+        "    # random.shuffle(LIST)\n",
+        "\n",
+        "    # Time the algorithm\n",
+        "    start = time.time()\n",
+        "    selection(LIST)\n",
+        "    end = time.time()\n",
+        "\n",
+        "    # Determine the time to size ratio\n",
+        "    ratio=(end-start)/(EXPECTED_TIME)\n",
+        "\n",
+        "    # Display results. Not in timing chunk, so will not skew results.\n",
+        "    print(\"N:\", N, \"|\", \"Time:\", end-start, \"|\", \"Ratio:\", ratio)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VgU1wmZ--mp7",
+        "outputId": "a412c195-31b2-4f41-ba99-4da410014723"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "N: 100 | Time: 0.00020575523376464844 | Ratio: 2.0575523376464844e-08\n",
+            "N: 100 | Time: 0.00023317337036132812 | Ratio: 2.3317337036132812e-08\n",
+            "N: 1000 | Time: 0.029400110244750977 | Ratio: 2.9400110244750978e-08\n",
+            "N: 10000 | Time: 4.30512261390686 | Ratio: 4.30512261390686e-08\n"
           ]
         }
       ]
