--- a/HW04_InsertionSort.ipynb
+++ b/HW04_InsertionSort.ipynb
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "fSME9MywceAq"
       },
-      "execution_count": 6,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -69,13 +69,14 @@
       "metadata": {
         "id": "TJZL4jFQZhAp"
       },
-      "execution_count": 19,
+      "execution_count": 40,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "for size in [10, 100, 1000, 10000]:\n",
+        "# Unsorted Data\n",
+        "for size in [100, 1000, 10000]:\n",
         "    N = size # Run the sorting algorithm on multiple array sizes\n",
         "\n",
         "    # Expected time for insertion sort\n",
@@ -101,18 +102,62 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f1GS3NjwZqmS",
-        "outputId": "3b8435f6-7c16-4a51-fbb4-60b38b6e82e0"
+        "outputId": "a09c11da-36f5-4ac7-878d-6d76f933e556"
       },
-      "execution_count": 26,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "N: 10 | Time: 4.0531158447265625e-06 | Ratio: 4.053115844726563e-08\n",
-            "N: 100 | Time: 0.00020241737365722656 | Ratio: 2.0241737365722657e-08\n",
-            "N: 1000 | Time: 0.02307724952697754 | Ratio: 2.307724952697754e-08\n",
-            "N: 10000 | Time: 2.3976447582244873 | Ratio: 2.3976447582244872e-08\n"
+            "N: 100 | Time: 0.00018215179443359375 | Ratio: 1.8215179443359374e-08\n",
+            "N: 1000 | Time: 0.024741411209106445 | Ratio: 2.4741411209106446e-08\n",
+            "N: 10000 | Time: 3.565866708755493 | Ratio: 3.565866708755493e-08\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Sorted Data\n",
+        "for size in [10000, 100000, 1000000, 10000000]:\n",
+        "    N = size # Run the sorting algorithm on multiple array sizes\n",
+        "\n",
+        "    # Expected time for insertion sort\n",
+        "    EXPECTED_TIME = N\n",
+        "\n",
+        "    # Create a list of integers with size N and shuffle it.\n",
+        "    LIST = list(range(N))\n",
+        "\n",
+        "    # Time the algorithm\n",
+        "    start = time.time()\n",
+        "    insertion(LIST)\n",
+        "    end = time.time()\n",
+        "\n",
+        "    # Determine the time to size ratio\n",
+        "    ratio=(end-start)/(EXPECTED_TIME)\n",
+        "\n",
+        "    # Display results. Not in timing chunk, so will not skew results.\n",
+        "    print(\"N:\", N, \"|\", \"Time:\", end-start, \"|\", \"Ratio:\", ratio)\n"
+      ],
+      "metadata": {
+        "id": "bSt-MwAlAV1S",
+        "outputId": "c8a940de-ce1c-482e-f0cb-c21be3a09d8d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "N: 10000 | Time: 0.0014104843139648438 | Ratio: 1.4104843139648438e-07\n",
+            "N: 100000 | Time: 0.01175546646118164 | Ratio: 1.175546646118164e-07\n",
+            "N: 1000000 | Time: 0.12076425552368164 | Ratio: 1.2076425552368165e-07\n",
+            "N: 10000000 | Time: 1.420288324356079 | Ratio: 1.420288324356079e-07\n"
           ]
         }
       ]
