--- a/HW04_PowerSort.ipynb
+++ b/HW04_PowerSort.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lukeb667/laBecker_CS315/blob/main/HW04_InsertionSort.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lukeb667/laBecker_CS315/blob/main/HW04_PowerSort.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,7 +37,7 @@
         "# October 4, 2025\n",
         "# HW04, Algorithms & Analysis\n",
         "\n",
-        "# This file demonstrates the timing of insertion sort.\n"
+        "# This file demonstrates the timing of PowerSort (Python's Default).\n"
       ]
     },
     {
@@ -50,37 +50,18 @@
       "metadata": {
         "id": "fSME9MywceAq"
       },
-      "execution_count": 39,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def insertion(A):\n",
-        "    n = len(A)\n",
-        "    for i in range(1, n):\n",
-        "        key = A[i]\n",
-        "        j = i - 1\n",
-        "        while j >= 0 and A[j] > key:\n",
-        "            A[j + 1] = A[j]\n",
-        "            j -= 1\n",
-        "        A[j + 1] = key"
-      ],
-      "metadata": {
-        "id": "TJZL4jFQZhAp"
-      },
-      "execution_count": 40,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Unsorted Data\n",
-        "for size in [100, 1000, 10000]:\n",
+        "for size in [1000, 10000, 100000, 1000000]:\n",
         "    N = size # Run the sorting algorithm on multiple array sizes\n",
         "\n",
-        "    # Expected time for insertion sort\n",
-        "    EXPECTED_TIME = math.pow(N, 2)\n",
+        "    # Expected time for power sort\n",
+        "    EXPECTED_TIME = N * math.log2(N)\n",
         "\n",
         "    # Create a list of integers with size N and shuffle it.\n",
         "    LIST = list(range(N))\n",
@@ -88,7 +69,7 @@
         "\n",
         "    # Time the algorithm\n",
         "    start = time.time()\n",
-        "    insertion(LIST)\n",
+        "    LIST.sort()\n",
         "    end = time.time()\n",
         "\n",
         "    # Determine the time to size ratio\n",
@@ -102,17 +83,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f1GS3NjwZqmS",
-        "outputId": "a09c11da-36f5-4ac7-878d-6d76f933e556"
+        "outputId": "4cb7a70c-2d1b-4f5f-dbc0-ed1178e945cd"
       },
-      "execution_count": 48,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "N: 100 | Time: 0.00018215179443359375 | Ratio: 1.8215179443359374e-08\n",
-            "N: 1000 | Time: 0.024741411209106445 | Ratio: 2.4741411209106446e-08\n",
-            "N: 10000 | Time: 3.565866708755493 | Ratio: 3.565866708755493e-08\n"
+            "N: 1000 | Time: 0.00012540817260742188 | Ratio: 1.2583873885413336e-08\n",
+            "N: 10000 | Time: 0.001821279525756836 | Ratio: 1.3706494193536951e-08\n",
+            "N: 100000 | Time: 0.028960704803466797 | Ratio: 1.74360816828269e-08\n",
+            "N: 1000000 | Time: 0.5168948173522949 | Ratio: 2.5933474104382617e-08\n"
           ]
         }
       ]
@@ -121,18 +103,18 @@
       "cell_type": "code",
       "source": [
         "# Sorted Data\n",
-        "for size in [10000, 100000, 1000000, 10000000]:\n",
+        "for size in [100000, 1000000, 10000000, 10000000]:\n",
         "    N = size # Run the sorting algorithm on multiple array sizes\n",
         "\n",
-        "    # Expected time for insertion sort\n",
-        "    EXPECTED_TIME = N\n",
+        "    # Expected time for power sort\n",
+        "    EXPECTED_TIME = N * math.log2(N)\n",
         "\n",
         "    # Create a list of integers with size N and shuffle it.\n",
         "    LIST = list(range(N))\n",
         "\n",
         "    # Time the algorithm\n",
         "    start = time.time()\n",
-        "    insertion(LIST)\n",
+        "    LIST.sort()\n",
         "    end = time.time()\n",
         "\n",
         "    # Determine the time to size ratio\n",
@@ -143,21 +125,21 @@
       ],
       "metadata": {
         "id": "bSt-MwAlAV1S",
-        "outputId": "c8a940de-ce1c-482e-f0cb-c21be3a09d8d",
+        "outputId": "06760e94-32cc-47d4-e006-3f9cb7f8a9d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "N: 10000 | Time: 0.0014104843139648438 | Ratio: 1.4104843139648438e-07\n",
-            "N: 100000 | Time: 0.01175546646118164 | Ratio: 1.175546646118164e-07\n",
-            "N: 1000000 | Time: 0.12076425552368164 | Ratio: 1.2076425552368165e-07\n",
-            "N: 10000000 | Time: 1.420288324356079 | Ratio: 1.420288324356079e-07\n"
+            "N: 100000 | Time: 0.0014295578002929688 | Ratio: 8.606795568472057e-10\n",
+            "N: 1000000 | Time: 0.008333683013916016 | Ratio: 4.1811476025735535e-10\n",
+            "N: 10000000 | Time: 0.0842885971069336 | Ratio: 3.624770860231897e-10\n",
+            "N: 10000000 | Time: 0.08246946334838867 | Ratio: 3.546540313453757e-10\n"
           ]
         }
       ]
