--- a/HW04_PowerSort.ipynb
+++ b/HW04_PowerSort.ipynb
@@ -143,6 +143,19 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# I fear I may have defeated the purpose of this exercise a little bit, because I looked up what the sorting algorithm for Python's sort function was weeks ago.\n",
+        "# However, playing around with different sorting functions, n lg n seems to match best for both sorted and unsorted data.\n",
+        "# Having said that, powersort is wicked fast. It seems to easily beat out Theta(n) functions even at a hundred thousand elements, which is some sort of insanity."
+      ],
+      "metadata": {
+        "id": "AKVGhvfACrJX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
