Can this please update???

--- a/HW04_QuickSort .ipynb
+++ b/HW04_QuickSort .ipynb
@@ -22,18 +22,22 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lukeb667/laBecker_CS315/blob/main/QuicksortPoCkey%20.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lukeb667/laBecker_CS315/blob/main/HW04_QuickSort%20.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "t_LwP80OmwFK"
       },
       "outputs": [],
       "source": [
-        "# Template for testing Quick-Sort on small lists, outputing each intermediate step"
+        "# Luke Becker\n",
+        "# October 4, 2025\n",
+        "# HW04, Algorithms & Analysis\n",
+        "\n",
+        "# This file demonstrates the timing of Quicksort."
       ]
     },
     {
@@ -47,35 +51,28 @@
       "metadata": {
         "id": "LMcLd_etm-0Y"
       },
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "# Partition provided as a convenience\n",
-        "\n",
         "def Partition(A,p,r):\n",
-        "    x = A[r]\n",
+        "    x = A[r] # set the partiton limit\n",
         "    i = p - 1\n",
         "    for j in range(p,r):\n",
         "        if ( A[j] <= x ):\n",
         "            i = i + 1\n",
-        "            temp=A[i]\n",
-        "            A[i]=A[j]\n",
-        "            A[j]=temp\n",
+        "            A[i], A[j] = A[j], A[i] #Swap scanned element with the element after the last orderd\n",
         "\n",
-        "    temp=A[i+1]\n",
-        "    A[i+1]=A[r]\n",
-        "    A[r]=temp\n",
+        "    A[i+1], A[r] = A[r], A[+1] # Swap limit with element after last ordered\n",
         "\n",
         "    return i + 1"
       ],
       "metadata": {
         "id": "TyWIYm1_nIYR"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -83,59 +80,124 @@
       "source": [
         "def Quicksort(A,p,r):\n",
         "  while p < r:\n",
-        "    q = Partition(A , p , r)\n",
-        "    Quicksort(A , p , q-1)\n",
-        "    p=q+1"
+        "    q = Partition(A , p , r) # get a partition\n",
+        "    Quicksort(A , p , q-1) # recursive call\n",
+        "    p=q+1 # tail recurstion"
       ],
       "metadata": {
         "id": "neX-YNcPnLpk"
       },
-      "execution_count": 26,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "sys.setrecursionlimit(50000)\n",
+        "sys.setrecursionlimit(50000)"
+      ],
+      "metadata": {
+        "id": "RVXFjLS0nCeo"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
-        "N=10000\n",
-        "EXPECTED_TIME = N*math.log(N,2)\n",
         "\n",
-        "A = list(range(N))\n",
+        "# Unsorted Data\n",
+        "for size in [1000, 10000, 100000, 1000000]:\n",
+        "    N = size # Run the sorting algorithm on multiple array sizes\n",
         "\n",
-        "random.shuffle(A)\n",
-        "A.reverse()\n",
+        "    # Expected time for power sort\n",
+        "    EXPECTED_TIME = N * math.log2(N)\n",
         "\n",
+        "    # Create a list of integers with size N and shuffle it.\n",
+        "    LIST = list(range(N))\n",
+        "    random.shuffle(LIST)\n",
         "\n",
-        "start = time.time()\n",
-        "Quicksort(A,0,N-1)\n",
-        "end = time.time()\n",
+        "    # Time the algorithm\n",
+        "    start = time.time()\n",
+        "    Quicksort(LIST, 0, N-1)\n",
+        "    end = time.time()\n",
         "\n",
-        "ratio=(end-start)/(EXPECTED_TIME)\n",
+        "    # Determine the time to size ratio\n",
+        "    ratio=(end-start)/(EXPECTED_TIME)\n",
         "\n",
-        "print(\"Sorted!\")\n",
-        "print(\"N:\", N, \"|\", \"Time:\", end-start, \"Ratio:\", ratio)\n",
+        "    # Display results. Not in timing chunk, so will not skew results.\n",
+        "    print(\"N:\", N, \"|\", \"Time:\", end-start, \"|\", \"Ratio:\", ratio)\n",
         "\n",
         "\n"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 391
         },
-        "id": "RVXFjLS0nCeo",
-        "outputId": "4b1761c1-325f-4438-bc7e-fdd5bcdcb8a8"
+        "id": "1_XpPrJLHMYW",
+        "outputId": "a7494349-4da4-4357-86a5-b00cfa168087"
       },
-      "execution_count": 34,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sorted!\n",
-            "N: 10000 | Time: 0.01945781707763672 Ratio: 1.46434664762788e-07\n"
+            "N: 1000 | Time: 0.012855052947998047 | Ratio: 1.2899188443987002e-06\n",
+            "N: 10000 | Time: 1.0442438125610352 | Ratio: 7.85871775918469e-06\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2898980386.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;31m# Time the algorithm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mstart\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mQuicksort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLIST\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-1519744751.py\u001b[0m in \u001b[0;36mQuicksort\u001b[0;34m(A, p, r)\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;32mwhile\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPartition\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# get a partition\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mQuicksort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# recursive call\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;31m# tail recurstion\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-1519744751.py\u001b[0m in \u001b[0;36mQuicksort\u001b[0;34m(A, p, r)\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;32mwhile\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPartition\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# get a partition\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mQuicksort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# recursive call\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;31m# tail recurstion\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-1519744751.py\u001b[0m in \u001b[0;36mQuicksort\u001b[0;34m(A, p, r)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mQuicksort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;32mwhile\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPartition\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# get a partition\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mQuicksort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# recursive call\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;31m# tail recurstion\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-1154847139.py\u001b[0m in \u001b[0;36mPartition\u001b[0;34m(A, p, r)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m             \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0mA\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#Swap scanned element with the element after the last orderd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "# Sorted Data\n",
+        "for size in [100, 1000, 10000, 100000]:\n",
+        "    N = size # Run the sorting algorithm on multiple array sizes\n",
+        "\n",
+        "    # Expected time for power sort\n",
+        "    EXPECTED_TIME = math.pow(N, 2)\n",
+        "\n",
+        "    # Create a list of integers with size N and shuffle it.\n",
+        "    LIST = list(range(N))\n",
+        "\n",
+        "    # Time the algorithm\n",
+        "    start = time.time()\n",
+        "    Quicksort(LIST, 0, N-1)\n",
+        "    end = time.time()\n",
+        "\n",
+        "    # Determine the time to size ratio\n",
+        "    ratio=(end-start)/(EXPECTED_TIME)\n",
+        "\n",
+        "    # Display results. Not in timing chunk, so will not skew results.\n",
+        "    print(\"N:\", N, \"|\", \"Time:\", end-start, \"|\", \"Ratio:\", ratio)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "flgPwKoGHS-B"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
